--- a/2w_dnn_model.ipynb
+++ b/2w_dnn_model.ipynb
@@ -157,11 +157,19 @@
    "outputs": [],
    "source": [
     "    \n",
+    "bid_size_raw_features = ['Bid1Size', 'Bid2Size', 'Bid3Size', 'Bid4Size', 'Bid5Size', 'Bid_Total_Size']\n",
+    "# ------ use bid_size_raw\n",
+    "bid_size_raw = True\n",
+    "# bid_size_raw = False\n",
     "bid_size_features = ['Bid1SizeProp', 'Bid2SizeProp', 'Bid3SizeProp', 'Bid4SizeProp', 'Bid5SizeProp']\n",
     "# ------ use bid_size_features\n",
     "bid_size = True\n",
     "# bid_size = False\n",
     "\n",
+    "ask_size_raw_features = ['Ask1Size', 'Ask2Size', 'Ask3Size', 'Ask4Size', 'Ask5Size', 'Ask_Total_Size']\n",
+    "# ------ use ask_size_raw\n",
+    "ask_size_raw = True\n",
+    "# ask_size_raw = False\n",
     "ask_size_features = ['Ask1SizeProp', 'Ask2SizeProp', 'Ask3SizeProp', 'Ask4SizeProp', 'Ask5SizeProp']\n",
     "# ------ use ask_size_features\n",
     "ask_size = True\n",
@@ -174,15 +182,18 @@
     "# q_imb = False\n",
     "\n",
     "ba_ratio_features = ['BidAskRatio1', 'BidAskRatio2', 'BidAskRatio3', 'BidAskRatio4', 'BidAskRatio5', 'BidAskRatioTotal']\n",
-    "# ba_ratio_features = ['BidAskRatio1']\n",
     "# ------ use ba_ratio_features\n",
     "ba_ratio = True\n",
     "# ba_ratio = False\n",
     "\n",
     "\n",
-    "size_features = [] \n",
+    "size_features = []\n",
+    "if bid_size_raw: \n",
+    "    size_features = size_features + bid_size_raw_features\n",
     "if bid_size: \n",
     "    size_features = size_features + bid_size_features\n",
+    "if ask_size_raw:\n",
+    "    size_features = size_features + ask_size_raw_features \n",
     "if ask_size:\n",
     "    size_features = size_features + ask_size_features \n",
     "if q_imb:\n",
@@ -225,7 +236,7 @@
     "PC_list_Price = []\n",
     "# PC_list_Price = PC_list_Price + speard_features\n",
     "PC_list_Size = []\n",
-    "# PC_list_Size = PC_list_Size + size_features\n"
+    "# PC_list_Size = PC_list_Size + bid_size_raw_features\n"
    ]
   },
   {
@@ -494,7 +505,7 @@
     "params = {'dense_layer1': {'dense_drop': 0.1, 'kernel_regularizer': 0.01, 'layers': 'one'},\n",
     "          'dense_layer2': {'dense_drop': 0.05, 'kernel_regularizer': 0.01, 'layers': 'two'},\n",
     "          'dense_layer3': {'dense_drop': 0.0, 'kernel_regularizer': 0.0, 'layers': 'three'},\n",
-    "          'batch_size': 128, 'epochs': 300, 'lr': 0.0005, 'optimizer': 'adam'}\n",
+    "          'batch_size': 128, 'epochs': 1000, 'lr': 0.0005, 'optimizer': 'adam'}\n",
     "relu =  False\n",
     "\n",
     "dim_p = x_train_p.shape[1]\n",
@@ -521,6 +532,8 @@
     "    Concat_ps = Concatenate()([fc_layer_p_2, fc_layer_s_2])\n",
     "    pred_y = Dense(1, activation='linear')(Concat_ps)\n",
     "    \n",
+    "    #     pred_y = Dot(axes=1, name='midpt')([fc_layer_p_1, fc_layer_s_1])\n",
+    "    \n",
     "else:\n",
     "    # ----- price block -----\n",
     "    fc_layer_p_1 = Dense(out_dim_layer_1, activation='linear')(input_p)\n",
@@ -533,7 +546,7 @@
     "    Concat_ps = Concatenate()([fc_layer_p_2, fc_layer_s_2])\n",
     "    pred_y = Dense(1, activation='linear')(Concat_ps)\n",
     "    \n",
-    "#     pred_y = Dot(axes=1, name='midpt')([fc_layer_p_1, fc_layer_s_1])\n",
+    "#     pred_y = Dot(axes=1, name='midpt')([fc_layer_p_2, fc_layer_s_2])\n",
     "    \n",
     "    \n",
     "model = Model(inputs=[input_p, input_s], outputs=pred_y,)    \n",
