--- a/baseline_model.ipynb
+++ b/baseline_model.ipynb
@@ -116,13 +116,13 @@
     "price_stats_features = ['MicroPrice', 'Bid_Mean', 'Ask_Mean']\n",
     "# ------ use price_stats_features\n",
     "price_stats = True\n",
-    "price_stats = False\n",
+    "# price_stats = False\n",
     "\n",
     "speard_features = ['Spread1', 'Spread2', 'Spread3', 'Spread4', 'Spread5', 'SpreadMean']\n",
     "# speard_features = ['Spread1']\n",
     "# ------ use speard_features\n",
     "speard = True\n",
-    "speard = False\n",
+    "# speard = False\n",
     "\n",
     "# ------ use midpt \n",
     "midpt = True\n",
@@ -157,11 +157,19 @@
    "outputs": [],
    "source": [
     "    \n",
+    "bid_size_raw_features = ['Bid1Size', 'Bid2Size', 'Bid3Size', 'Bid4Size', 'Bid5Size', 'Bid_Total_Size']\n",
+    "# ------ use bid_size_raw\n",
+    "bid_size_raw = True\n",
+    "# bid_size_raw = False\n",
     "bid_size_features = ['Bid1SizeProp', 'Bid2SizeProp', 'Bid3SizeProp', 'Bid4SizeProp', 'Bid5SizeProp']\n",
     "# ------ use bid_size_features\n",
     "bid_size = True\n",
     "# bid_size = False\n",
     "\n",
+    "ask_size_raw_features = ['Ask1Size', 'Ask2Size', 'Ask3Size', 'Ask4Size', 'Ask5Size', 'Ask_Total_Size']\n",
+    "# ------ use ask_size_raw\n",
+    "ask_size_raw = True\n",
+    "# ask_size_raw = False\n",
     "ask_size_features = ['Ask1SizeProp', 'Ask2SizeProp', 'Ask3SizeProp', 'Ask4SizeProp', 'Ask5SizeProp']\n",
     "# ------ use ask_size_features\n",
     "ask_size = True\n",
@@ -171,17 +179,21 @@
     "# q_imb_features = ['Q_ImB1']\n",
     "# ------ use q_imb_features\n",
     "q_imb = True\n",
-    "q_imb = False\n",
+    "# q_imb = False\n",
     "\n",
     "ba_ratio_features = ['BidAskRatio1', 'BidAskRatio2', 'BidAskRatio3', 'BidAskRatio4', 'BidAskRatio5', 'BidAskRatioTotal']\n",
     "# ------ use ba_ratio_features\n",
     "ba_ratio = True\n",
-    "ba_ratio = False\n",
+    "# ba_ratio = False\n",
     "\n",
     "\n",
-    "size_features = [] \n",
+    "size_features = []\n",
+    "if bid_size_raw: \n",
+    "    size_features = size_features + bid_size_raw_features\n",
     "if bid_size: \n",
     "    size_features = size_features + bid_size_features\n",
+    "if ask_size_raw:\n",
+    "    size_features = size_features + ask_size_raw_features \n",
     "if ask_size:\n",
     "    size_features = size_features + ask_size_features \n",
     "if q_imb:\n",
