--- a/dnn_model.ipynb
+++ b/dnn_model.ipynb
@@ -157,11 +157,19 @@
    "outputs": [],
    "source": [
     "    \n",
+    "bid_size_raw_features = ['Bid1Size', 'Bid2Size', 'Bid3Size', 'Bid4Size', 'Bid5Size', 'Bid_Total_Size']\n",
+    "# ------ use bid_size_raw\n",
+    "bid_size_raw = True\n",
+    "# bid_size_raw = False\n",
     "bid_size_features = ['Bid1SizeProp', 'Bid2SizeProp', 'Bid3SizeProp', 'Bid4SizeProp', 'Bid5SizeProp']\n",
     "# ------ use bid_size_features\n",
     "bid_size = True\n",
     "# bid_size = False\n",
     "\n",
+    "ask_size_raw_features = ['Ask1Size', 'Ask2Size', 'Ask3Size', 'Ask4Size', 'Ask5Size', 'Ask_Total_Size']\n",
+    "# ------ use ask_size_raw\n",
+    "ask_size_raw = True\n",
+    "# ask_size_raw = False\n",
     "ask_size_features = ['Ask1SizeProp', 'Ask2SizeProp', 'Ask3SizeProp', 'Ask4SizeProp', 'Ask5SizeProp']\n",
     "# ------ use ask_size_features\n",
     "ask_size = True\n",
@@ -179,15 +187,20 @@
     "# ba_ratio = False\n",
     "\n",
     "\n",
-    "size_features = [] \n",
+    "size_features = []\n",
+    "if bid_size_raw: \n",
+    "    size_features = size_features + bid_size_raw_features\n",
     "if bid_size: \n",
     "    size_features = size_features + bid_size_features\n",
+    "if ask_size_raw:\n",
+    "    size_features = size_features + ask_size_raw_features \n",
     "if ask_size:\n",
     "    size_features = size_features + ask_size_features \n",
     "if q_imb:\n",
     "    size_features = size_features + q_imb_features \n",
     "if ba_ratio:\n",
-    "    size_features = size_features + ba_ratio_features\n"
+    "    size_features = size_features + ba_ratio_features \n",
+    "\n"
    ]
   },
   {
@@ -223,7 +236,7 @@
     "PC_list_Price = []\n",
     "# PC_list_Price = PC_list_Price + speard_features\n",
     "PC_list_Size = []\n",
-    "# PC_list_Size = PC_list_Size + size_features\n",
+    "# PC_list_Size = PC_list_Size + bid_size_raw_features\n",
     "\n"
    ]
   },
