--- a/data_proc.ipynb
+++ b/data_proc.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "# generate next_Bid1 next_Ask1 column \n",
-    "# possible regularizers in some model, not features\n",
+    "# possible regularizers in some models, not features\n",
     "tmp_list = df_book['Bid1'][1:].values.tolist()\n",
     "tmp_list.append(np.nan)\n",
     "df_book = df_book.assign(nextBid1=tmp_list)\n",
